yaml/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-service
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main-service
        image: main-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: main
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
