yaml/planning-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-service
  labels:
    app: planning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planning
  template:
    metadata:
      labels:
        app: planning
    spec:
      containers:
      - name: planning-service
        image: planning-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: planning-service
spec:
  selector:
    app: planning
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
