yaml/quiz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-service
  labels:
    app: quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz
  template:
    metadata:
      labels:
        app: quiz
    spec:
      containers:
      - name: quiz-service
        image: quiz-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
spec:
  selector:
    app: quiz
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
