yaml/session-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-service
  labels:
    app: session
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session
  template:
    metadata:
      labels:
        app: session
    spec:
      containers:
      - name: session-service
        image: session-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: session-service
spec:
  selector:
    app: session
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
