yaml/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - host: main.local
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: main-service
            port:
              number: 8000
